@@ -12,7 +12,10 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
 import no.nav.foreldrepenger.behandling.aksjonspunkt.AksjonspunktOppdaterParameter;
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkEndretFeltType;
+import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkAktør;
+import no.nav.foreldrepenger.behandlingslager.behandling.historikk.Historikkinnslag;
+import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkinnslagRepository;
+import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkinnslagLinjeBuilder;
 import no.nav.foreldrepenger.behandlingslager.behandling.skjermlenke.SkjermlenkeType;
 import no.nav.foreldrepenger.domene.arbeidsforhold.InntektArbeidYtelseTjeneste;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagEntitet;
@@ -23,26 +26,25 @@ import no.nav.foreldrepenger.domene.modell.kodeverk.AktivitetStatus;
 import no.nav.foreldrepenger.domene.rest.dto.FastsatteAndelerTidsbegrensetDto;
 import no.nav.foreldrepenger.domene.rest.dto.FastsattePerioderTidsbegrensetDto;
 import no.nav.foreldrepenger.domene.rest.dto.FastsettBGTidsbegrensetArbeidsforholdDto;
-import no.nav.foreldrepenger.historikk.HistorikkTjenesteAdapter;
 
 @ApplicationScoped
 public class FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste {
 
-    private HistorikkTjenesteAdapter historikkAdapter;
     private ArbeidsgiverHistorikkinnslag arbeidsgiverHistorikkinnslagTjeneste;
     private InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste;
+    private HistorikkinnslagRepository historikkinnslagRepository;
 
     FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste() {
         // CDI
     }
 
     @Inject
-    public FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste(HistorikkTjenesteAdapter historikkAdapter,
-                                                                  ArbeidsgiverHistorikkinnslag arbeidsgiverHistorikkinnslagTjeneste,
-                                                                  InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste) {
-        this.historikkAdapter = historikkAdapter;
+    public FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste(ArbeidsgiverHistorikkinnslag arbeidsgiverHistorikkinnslagTjeneste,
+                                                                  InntektArbeidYtelseTjeneste inntektArbeidYtelseTjeneste,
+                                                                  HistorikkinnslagRepository historikkinnslagRepository) {
         this.arbeidsgiverHistorikkinnslagTjeneste = arbeidsgiverHistorikkinnslagTjeneste;
         this.inntektArbeidYtelseTjeneste = inntektArbeidYtelseTjeneste;
+        this.historikkinnslagRepository = historikkinnslagRepository;
     }
 
     public void lagHistorikk(AksjonspunktOppdaterParameter param,
@@ -59,8 +61,9 @@ public class FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste {
                 .filter(p -> !p.getBeregningsgrunnlagPeriodeFom().isBefore(periode.getPeriodeFom()))
                 .toList();
             var fastatteAndeler = periode.getFastsatteTidsbegrensedeAndeler();
-            fastatteAndeler.forEach(andel -> lagHistorikkForAndelIPeriode(arbeidsforholdInntekterMap, periode,
-                bgPerioderSomSkalFastsettesAvDennePerioden, andel, overstyringer));
+            fastatteAndeler.forEach(
+                andel -> lagHistorikkForAndelIPeriode(arbeidsforholdInntekterMap, periode, bgPerioderSomSkalFastsettesAvDennePerioden, andel,
+                    overstyringer));
         }
         var forrigeOverstyrtFrilansinntekt = gammeltGrunnlag.flatMap(bg -> finnFrilansAndel(hentFørstePeriode(bg)))
             .map(BeregningsgrunnlagPrStatusOgAndel::getOverstyrtPrÅr)
@@ -70,7 +73,7 @@ public class FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste {
     }
 
     private BeregningsgrunnlagPeriode hentFørstePeriode(BeregningsgrunnlagEntitet bg) {
-        return bg.getBeregningsgrunnlagPerioder().get(0);
+        return bg.getBeregningsgrunnlagPerioder().getFirst();
     }
 
 
@@ -109,9 +112,8 @@ public class FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste {
                                             Map<String, List<Integer>> tilHistorikkInnslag,
                                             BeregningsgrunnlagPrStatusOgAndel korrektAndel,
                                             List<ArbeidsforholdOverstyring> overstyringer) {
-        var arbeidsforholdInfo = arbeidsgiverHistorikkinnslagTjeneste.lagHistorikkinnslagTekstForBeregningsgrunnlag(
-            korrektAndel.getAktivitetStatus(), korrektAndel.getArbeidsgiver(), korrektAndel.getArbeidsforholdRef(),
-            overstyringer);
+        var arbeidsforholdInfo = arbeidsgiverHistorikkinnslagTjeneste.lagHistorikkinnslagTekstForBeregningsgrunnlag(korrektAndel.getAktivitetStatus(),
+            korrektAndel.getArbeidsgiver(), korrektAndel.getArbeidsforholdRef(), overstyringer);
         if (tilHistorikkInnslag.containsKey(arbeidsforholdInfo)) {
             var inntekter = tilHistorikkInnslag.get(arbeidsforholdInfo);
             inntekter.add(arbeidsforhold.getBruttoFastsattInntekt());
@@ -127,33 +129,46 @@ public class FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste {
                                      AksjonspunktOppdaterParameter param,
                                      Map<String, List<Integer>> tilHistorikkInnslag,
                                      BigDecimal forrigeFrilansInntekt) {
-        oppdaterVedEndretVerdi(HistorikkEndretFeltType.INNTEKT_FRA_ARBEIDSFORHOLD, tilHistorikkInnslag);
-        oppdaterFrilansInntektVedEndretVerdi(HistorikkEndretFeltType.FRILANS_INNTEKT, forrigeFrilansInntekt, dto);
+        List<HistorikkinnslagLinjeBuilder> linjeBuilderList = new ArrayList<>(oppdaterVedEndretVerdi(tilHistorikkInnslag));
+        linjeBuilderList.addAll(oppdaterFrilansInntektVedEndretVerdi(forrigeFrilansInntekt, dto));
+        linjeBuilderList.add(new HistorikkinnslagLinjeBuilder().tekst(dto.getBegrunnelse()));
 
-        historikkAdapter.tekstBuilder()
-            .medBegrunnelse(dto.getBegrunnelse(), param.erBegrunnelseEndret())
-            .medSkjermlenke(SkjermlenkeType.BEREGNING_FORELDREPENGER);
+        var historikkinnslag = new Historikkinnslag.Builder()
+            .medAktør(HistorikkAktør.SAKSBEHANDLER)
+            .medBehandlingId(param.getBehandlingId())
+            .medFagsakId(param.getRef().fagsakId())
+            .medTittel(SkjermlenkeType.BEREGNING_FORELDREPENGER)
+            .medLinjer(linjeBuilderList)
+            .build();
+        historikkinnslagRepository.lagre(historikkinnslag);
     }
 
-    private void oppdaterVedEndretVerdi(HistorikkEndretFeltType historikkEndretFeltType,
-                                        Map<String, List<Integer>> tilHistorikkInnslag) {
+    private List<HistorikkinnslagLinjeBuilder> oppdaterVedEndretVerdi(Map<String, List<Integer>> tilHistorikkInnslag) {
+        HistorikkinnslagLinjeBuilder linjeBuilder = new HistorikkinnslagLinjeBuilder();
+        List<HistorikkinnslagLinjeBuilder> linjeBuilderList = new ArrayList<>();
         for (var entry : tilHistorikkInnslag.entrySet()) {
             var arbeidsforholdInfo = entry.getKey();
             var inntekter = entry.getValue();
-            historikkAdapter.tekstBuilder()
-                .medEndretFelt(historikkEndretFeltType, arbeidsforholdInfo, null, formaterInntekter(inntekter));
+            linjeBuilderList.add(
+                linjeBuilder.fraTil(String.format("Inntekt fra %s", arbeidsforholdInfo), null, formaterInntekter(inntekter)));
+            linjeBuilderList.add(HistorikkinnslagLinjeBuilder.LINJESKIFT);
         }
+        return linjeBuilderList;
     }
 
-    private void oppdaterFrilansInntektVedEndretVerdi(HistorikkEndretFeltType historikkEndretFeltType,
-                                                      BigDecimal forrigeFrilansInntekt,
-                                                      FastsettBGTidsbegrensetArbeidsforholdDto dto) {
+    private List<HistorikkinnslagLinjeBuilder> oppdaterFrilansInntektVedEndretVerdi(BigDecimal forrigeFrilansInntekt,
+                                                                                    FastsettBGTidsbegrensetArbeidsforholdDto dto) {
+        List<HistorikkinnslagLinjeBuilder> linjeBuilderList = new ArrayList<>();
+        HistorikkinnslagLinjeBuilder linjeBuilder = new HistorikkinnslagLinjeBuilder();
         if (forrigeFrilansInntekt != null && dto.getFrilansInntekt() != null) {
-            historikkAdapter.tekstBuilder()
-                .medEndretFelt(historikkEndretFeltType, forrigeFrilansInntekt, dto.getFrilansInntekt());
+            var fraInntekt = (int) Math.round(forrigeFrilansInntekt.doubleValue());
+            linjeBuilderList.add(linjeBuilder.fraTil("Frilansinntekt", fraInntekt, dto.getFrilansInntekt()));
+            linjeBuilderList.add(HistorikkinnslagLinjeBuilder.LINJESKIFT);
         } else if (dto.getFrilansInntekt() != null) {
-            historikkAdapter.tekstBuilder().medEndretFelt(historikkEndretFeltType, null, dto.getFrilansInntekt());
+            linjeBuilderList.add(linjeBuilder.fraTil("Frilansinntekt", null, dto.getFrilansInntekt()));
+            linjeBuilderList.add(HistorikkinnslagLinjeBuilder.LINJESKIFT);
         }
+        return linjeBuilderList;
     }
 
     private String formaterInntekter(List<Integer> inntekter) {
@@ -162,6 +177,6 @@ public class FastsettBGTidsbegrensetArbeidsforholdHistorikkTjeneste {
             return inntekterString.substring(0, inntekterString.lastIndexOf(',')) + " og " + inntekterString.substring(
                 inntekterString.lastIndexOf(',') + 1);
         }
-        return inntekter.get(0).toString();
+        return inntekter.getFirst().toString();
     }
 }
